# system-integration-mandatory-assignment-1

./: .gitignore  README.md  docker-compose.yml
Client_System/: Dockerfile
Main_System/: README.md  main.dart  people.csv  pubspec.yaml
NemID_CodeGenerator/: Cargo.toml  Dockerfile  README.md
NemID_CodeGenerator/src/: main.rs
NemID_ESB/: Dockerfile  esb_mock.js
NemID_PasswordGenerator/: main.go
NemID_UserGenerator/User Generator/: Dockerfile  README.md  User Generator.sln
NemID_UserGenerator/User Generator GO/: main.go
NemID_UserGenerator/User Generator/User Generator/: Program.cs  Startup.cs  User Generator.csproj  appsettings.json
NemID_UserGenerator/User Generator/User Generator/Controllers/: UserGenerationController.cs
NemID_UserGenerator/User Generator/User Generator/Models/: NemID.cs  User.cs
NemID_UserGenerator/User Generator/User Generator/Properties/: launchSettings.json
NemID_UserGenerator/User Generator/User Generator/Utils/: Util.cs
nemId_PasswordGenerator/: Dockerfile  README.md  pubspec.yaml
nemId_PasswordGenerator/lib/: channel.dart  my_project.dart  nemid_passwordgenerator.dart
nemId_PasswordGenerator/lib/controllers/: password_gen_controller.dart
nemId_PasswordGenerator/test/harness/: app.dart
nemid_util_server/: README.md  pubspec.yaml
nemid_util_server/lib/: channel.dart  nemid_util_server.dart
nemid_util_server/test/harness/: app.dart
