[package]
name = "rest-api"
version = "0.1.0"
authors = ["Martin L. Jensen <martinloesethjensen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
actix-web = "3.1.0"
actix-rt = "1.0"
serde = "1.0"
serde_json = "1.0"
rusqlite = "0.24.1"